# accounts-assessor

./: .all-contributorsrc  .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  README.md.mrkev2  bisect.sh  bisect_helper.sh  cashflow.pl  hhh  init.sh  init_prolog.sh  init_python.sh  main.pl  no_docker.txt  notes  prolog_server_unix_daemon.pl  rationale.txt  requirements.in  requirements.txt  servicemanager.yml  services.yml  supervisord.conf  todo  tododev2023-11-10_21-10-08  transactions.pl
HirePurchaseArrangements/: hirepurchase.pl
calculators/: .Study and training support loans repayment calculator for 2018 slash 19.py2.kate-swp  FITO  Study and training support loans repayment calculator for 2018 slash 19.py  (+1 more)
sources/frontend/: Dockerfile_hollow  README.md  debug.py  dev-requirements.txt  init_venv.sh  pip-compile.sh  requirements-dev.txt  requirements.in  requirements.txt  run_in_venv.sh  setup.cfg  start.sh  start2.sh
sources/frontend/app/: ai1.py  ai2.py  ai3.py  main.py  notes  rdftab.py
sources/frontend/app/templates/: task.html
sources/frontend/frontend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
sources/frontend/templates/: job.html  upload.html
sources/worker/: .dockerignore  .gitignore  Dockerfile  Dockerfile_hollow  README.md  dddd  init_venv.sh  requirements-dev.txt  requirements.txt  setup.cfg  start.sh  start2.sh
sources/worker/app/: account_hierarchy.py  call_prolog.py  host.py  main.py  misc.py  worker.py  xml_xsd.py
sources/worker/div7a/: div7a.py
sources/worker/worker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+3472 files in other folders)
