
[metadata]
name = frontend
version = 0.1.0

[options]
packages = find:
install_requires =
	jinja2
	pyyaml
	fastapi==0.110.0
	starlette>=0.36.2
	python-multipart
	agraph-python==101.0.7
	pycurl
	uvicorn[standard]
	pydantic
	requests
	rdflib




[options.extras_require]
dev =
    watchdog
	better_exceptions
