
[metadata]
name = worker
version = 0.1.0

[options]
packages = find:
install_requires =
	urllib3
	arelle-release==2.3.4
	fastapi
	uvicorn
	pycurl
	psutil
	sortedcontainers
	defusedxml
	xmlschema~=1.5
	requests
	memory_profiler @ git+https://github.com/koo5/memory_profiler
	pandas
	jinja2


[options.extras_require]
dev =
	fire
    watchdog
	better_exceptions

